syntax = "proto3";

package ecommerce;

service UserService {
  rpc GetUser (UserRequest) returns (UserResponse);
  rpc UpdateUser (UserUpdateRequest) returns (UserResponse);
}

service OrderService {
  rpc PlaceOrder (OrderRequest) returns (OrderResponse);
}

service PaymentService {
  rpc ProcessPayment (PaymentRequest) returns (PaymentResponse);
}

message UserRequest {
  int32 user_id = 1;
}

message UserUpdateRequest {
  int32 user_id = 1;
  string new_email = 2;
}

message UserResponse {
  int32 user_id = 1;
  string name = 2;
  string email = 3;
}

message OrderRequest {
  int32 user_id = 1;
  repeated string products = 2;
}

message OrderResponse {
  string order_id = 1;
}

message PaymentRequest {
  string order_id = 1;
  double amount = 2;
}

message PaymentResponse {
  string transaction_id = 1;
  bool success = 2;
}
